# microphone-library-for-pico

./: .gitignore  build.sh  notes.md
examples/usb_microphone/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c  usb_microphone.h
src/: pdm_microphone.c  pdm_microphone.pio
src/OpenPDM2PCM/: OpenPDMFilter.c  OpenPDMFilter.h
src/include/pico/: pdm_microphone.h
